src/objects/AGAPE_Goal__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Goal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Goal</label>
        <referenceTo>Agape_Goal__c</referenceTo>
        <relationshipLabel>Goals</relationshipLabel>
        <relationshipName>Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EFL</fullName>
                </value>
                <value>
                    <fullName>TR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Goal</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>